Fix cursor alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@
 html {
   height: 100%;
   scrollbar-color: black white;
-  cursor: url('data:image/svg+xml;utf8,<svg id="svg" xmlns="http://www.w3.org/2000/svg" width="66" height="72"><circle cx="42" cy="48" r="16" stroke-width="2" style="stroke: black; fill: black; filter: blur(4px)"/></svg>') 52 52, pointer;
+  cursor: url('data:image/svg+xml;utf8,<svg id="svg" xmlns="http://www.w3.org/2000/svg" width="48" height="48"><circle cx="24" cy="24" r="16" stroke-width="2" style="stroke: black; fill: black; filter: blur(4px)"/></svg>') 24 24, pointer;
 }
 
 body {
